agrego bienvenido_inicio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">aplicacionDeNotas</string>
+    <string name="bienvenido_inicio">Bienvenido</string>
 </resources>
