--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">aplicacionDeNotas</string>
-    <string name="bienvenido_inicio">Bienvenido</string>
+    <string name="bienvenido_inicio">Bienvenido </string>
+    <string name="ingrese_su_email">Ingrese su Email !</string>
+    <string name="Ingrese_su_contrasenia">Ingrese su Contraseña !</string>
 </resources>
